[gd_scene load_steps=17 format=2]

[ext_resource path="res://textures/ui/character_selection/rept_menu.png" type="Texture" id=1]
[ext_resource path="res://textures/ui/character_selection/money_menu.png" type="Texture" id=2]
[ext_resource path="res://textures/ui/character_selection/green_menu.png" type="Texture" id=3]
[ext_resource path="res://fonts/Caveat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://textures/ui/character_selection/health_animation.png" type="Texture" id=5]
[ext_resource path="res://textures/ui/character_selection/descr_animation.png" type="Texture" id=6]
[ext_resource path="res://textures/ui/character_selection/stats_menu.png" type="Texture" id=7]
[ext_resource path="res://textures/ui/character_selection/power_animation.png" type="Texture" id=8]
[ext_resource path="res://textures/ui/character_selection/5G_menu.png" type="Texture" id=9]
[ext_resource path="res://textures/ui/character_selection/speed_animation.png" type="Texture" id=10]
[ext_resource path="res://scenes/ui/character_selection/CharacterInformation.gd" type="Script" id=11]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="DynamicFont" id=5]
size = 38
font_data = ExtResource( 4 )

[node name="CharacterInformation" type="Node2D"]
script = ExtResource( 11 )

[node name="CharacterSprite" type="Node2D" parent="."]
position = Vector2( 0, 40 )
__meta__ = {
"_edit_group_": true
}

[node name="Reptiloid" type="Sprite" parent="CharacterSprite"]
visible = false
position = Vector2( 200, 260 )
texture = ExtResource( 1 )

[node name="Mason" type="Sprite" parent="CharacterSprite"]
visible = false
position = Vector2( 200, 280 )
texture = ExtResource( 2 )

[node name="Grayman" type="Sprite" parent="CharacterSprite"]
visible = false
position = Vector2( 200, 260 )
texture = ExtResource( 3 )

[node name="Tower5G" type="Sprite" parent="CharacterSprite"]
position = Vector2( 180, 220 )
texture = ExtResource( 9 )

[node name="StatsTriangleBg" type="Sprite" parent="."]
position = Vector2( 760, 320 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="speed_animation" type="Sprite" parent="StatsTriangleBg"]
position = Vector2( -300, 40 )
texture = ExtResource( 10 )
centered = false
hframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="StatsTriangleBg/speed_animation"]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="power_animation" type="Sprite" parent="StatsTriangleBg"]
position = Vector2( 100, 40 )
texture = ExtResource( 8 )
centered = false
hframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="StatsTriangleBg/power_animation"]
autoplay = "idle"
anims/idle = SubResource( 2 )

[node name="health_animation" type="Sprite" parent="StatsTriangleBg"]
position = Vector2( -120, -280 )
texture = ExtResource( 5 )
centered = false
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="StatsTriangleBg/health_animation"]
autoplay = "idle"
anims/idle = SubResource( 3 )

[node name="descr_animation" type="Sprite" parent="."]
position = Vector2( 600, 820 )
texture = ExtResource( 6 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="descr_animation"]
autoplay = "idle"
anims/idle = SubResource( 4 )

[node name="Label" type="Label" parent="descr_animation"]
margin_left = -440.0
margin_top = -140.0
margin_right = 440.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Такие вот у нас замечательные персонажи. Выбирай любого, все хороши."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
